Adds build step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       # Pull slate image
       - run:
           name: Pull Docker image
-          command: docker pull slatedocs/slate
+          command: docker build . -t slatedocs/slate
       # Build the docs
       - run:
           name: Build the docs
